--- a/style/style.css
+++ b/style/style.css
@@ -35,31 +35,77 @@ body{
 
 .article__p{
     height: 555px;
+    width: 100%;
     background-color: hsl(0, 0%, 100%);
     align-self: center;
     flex-basis: 50%;
 }
 
 .p1{
-    padding: 35px;
-    font-size: 15px;
+    padding: 30px;
+    font-size: 18px;
     font-family: "Montserrat";
     color: hsl(33, 8%, 72%);
     text-align: start;
     letter-spacing: 3px;
+    font-family: 'Poppins', sans-serif;
 }
 
-.h1{
-    text-align: center;
-    font-size: 45px;
+.h2{
+    padding-left: 30px;
+    text-align: start;
+    font-size: 48px;
     letter-spacing: normal;
+    line-height: 42px;
+    font-family: 'Poppins', sans-serif;
 }
 
 .p2{
-    text-align: center;
-    padding: 20px;
+    padding: 25px;
+    text-align: start;
+    padding-left: 30px;
+    font-size: 18px;
+    line-height: 30px;
+    color: hsl(228, 12%, 48%);
+    font-family: 'Poppins', sans-serif;
 }
 
-.article__buttom{
+.precios{
     display: flex;
+    flex-direction: row;
+    padding: 30px;
 }
+
+.precio{
+    padding-left: 35px;
+    font-size: 45px;
+    color: hsl(158, 36%, 37%);;
+    font-family: 'Poppins', sans-serif;
+}
+
+.oferta{
+    padding: 15px;
+    padding-right: 15px;
+    font-size: 20px;
+    text-decoration: line-through;
+    color: hsl(228, 12%, 48%);
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+button{
+    width: 250px;
+    height: 50px;
+    border-radius: 12px;
+    background-color: hsl(158, 36%, 37%);
+    border-color: hsl(0, 0%, 100%);
+    color: hsl(0, 0%, 100%);
+    font-size: 18px;
+}
+
+
+
